<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_source_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:text="@string/source_add"
        android:textColor="@color/text_view" />

    <EditText
        android:id="@+id/add_source_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_edittext"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textUri"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_source_title" />

    <Button
        android:id="@+id/add_source_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_cancel"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toStartOf="@id/add_source_accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_source_edittext" />

    <Button
        android:id="@+id/add_source_accept_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_confirm"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_source_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/add_source_edittext" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/add_source_cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/add_source_edittext"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/add_source_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_source_edittext"
        app:layout_constraintVertical_bias="0.22000003" />

</androidx.constraintlayout.widget.ConstraintLayout>
